# ei-extractor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: extractor.rs  main.rs
